Added support for Photos, service urls via env vars, Readme

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,4 +5,7 @@ spring.datasource.platform=h2
 
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create
+
 logging.level.notes=DEBUG
+logging.level.root=INFO
+#logging.level.org.apache.coyote.http11.Http11InputBuffer=DEBUG
