--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.error.includeStacktrace=NEVER
 spring.data.web.pageable.default-page-size=10
 spring.data.web.pageable.max-page-size=100
+services.notes.filestorage.url=${NOTES_FILESTORAGE_URL}
