--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,11 @@ server.error.includeStacktrace=NEVER
 spring.data.web.pageable.default-page-size=10
 spring.data.web.pageable.max-page-size=100
 services.notes.filestorage.url=${NOTES_FILESTORAGE_URL}
+
+spring.datasource.url=jdbc:h2:mem:testdb;
+spring.datasource.username=user
+spring.datasource.password=pass
+spring.datasource.platform=h2
+
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create
