--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
 <!--			<artifactId>spring-security-test</artifactId>-->
 <!--			<scope>test</scope>-->
 <!--		</dependency>-->
+		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-release-plugin -->
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-release-plugin</artifactId>
+			<version>3.0.0-M1</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
@@ -84,6 +90,10 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+
+	<scm>
+		<developerConnection>scm:git:git@github.com:barely-a-developer/notes-core.git</developerConnection>
+	</scm>
 
 	<build>
 		<plugins>
