--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,15 @@
+server.port=8082
 server.error.includeStacktrace=NEVER
+
 spring.data.web.pageable.default-page-size=10
 spring.data.web.pageable.max-page-size=100
-services.notes.filestorage.url=${NOTES_FILESTORAGE_URL}
 
 spring.datasource.url=jdbc:h2:mem:testdb;
 spring.datasource.username=user
 spring.datasource.password=pass
 spring.datasource.platform=h2
-
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${NOTES_OAUTH2_ISSUER_URI}
+services.notes.filestorage.url=${NOTES_FILESTORAGE_URL}
